--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -1,3 +1,6 @@
+.home {
+}
+
 .home > h1 {
   color: blue;
 }
@@ -5,4 +8,5 @@
 .home > div {
   display: grid;
   grid-template-columns: 2fr 1fr;
+  gap: 25px;
 }
